--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -319,6 +319,8 @@
 
             com_NabGalleries As com_Galleries:
                 AddNew: =true
+                EntryLabels: |-
+                    ={Line1: "Broj unosa:", Line2: "Rok trajanja:", Line3: "LOT:", Line4: "Rezervisana kol.:", Line5: Blank()}
                 FillPortions: =1
                 LayoutMinHeight: =250
                 LayoutMinWidth: =350
