--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -354,6 +354,9 @@
                 Width: =
 
             com_ProGalleries As com_Galleries:
+                EntriesToDisplay: =5
+                EntryLabels: |-
+                    ={Line1: "Broj unosa:", Line2: "Rok trajanja:", Line3: "LOT:", Line4: "Rezervisana kol.:", Line5: "Porebna kol.:"}
                 FillPortions: =1
                 LayoutMinHeight: =200
                 LayoutMinWidth: =350
