--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -292,7 +292,7 @@
                         Width: =32
                         X: =Parent.TemplateWidth - 50
                         Y: =lbl_InvBarcode.Y - 10
-                        ZIndex: =10
+                        ZIndex: =16
 
                     grp_InvBarcode As group:
                         Height: =5
@@ -306,7 +306,7 @@
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             Font: =App.Theme.Font
                             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
+                            Height: =21
                             OnSelect: =Select(Parent)
                             PaddingBottom: =0
                             PaddingLeft: =lbl_InvItemNo.PaddingLeft
@@ -315,7 +315,7 @@
                             Size: =12
                             Text: |-
                                 ="Barcode:"
-                            Width: =lbl_InvItemNo.Width
+                            Width: =114
                             Wrap: =false
                             X: =lbl_InvItemNo.X
                             Y: =lbl_InvQuantity.Height + lbl_InvQuantity.Y
@@ -326,7 +326,7 @@
                             DisabledColor: =RGBA(166, 166, 166, 1)
                             Font: =App.Theme.Font
                             FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
-                            Height: =Self.Size * 1.8
+                            Height: =21
                             OnSelect: =Select(Parent)
                             PaddingBottom: =0
                             PaddingLeft: =0
@@ -334,11 +334,11 @@
                             PaddingTop: =0
                             Size: =12
                             Text: =ThisItem.Barcode
-                            Width: =Parent.TemplateWidth - 125
+                            Width: =1163
                             Wrap: =false
-                            X: =lbl_InvBarcode.Width
+                            X: =114
                             Y: =lbl_InvBarcode.Y
-                            ZIndex: =11
+                            ZIndex: =10
 
                     grp_InvQuantity As group:
                         Height: =5
@@ -384,7 +384,7 @@
                             Wrap: =false
                             X: =lbl_InvQuantity.Width
                             Y: =lbl_InvQuantity.Y
-                            ZIndex: =12
+                            ZIndex: =11
 
                     grp_InvItemNo As group:
                         Height: =5
@@ -429,7 +429,7 @@
                             Wrap: =false
                             X: =lbl_InvItemNo.Width
                             Y: =10
-                            ZIndex: =16
+                            ZIndex: =15
 
                     grp_InvDescription As group:
                         Height: =5
@@ -474,7 +474,7 @@
                             Wrap: =false
                             X: =lbl_InvDescription.Width
                             Y: =lbl_InvDescription.Y
-                            ZIndex: =15
+                            ZIndex: =14
 
                     grp_InvLOTNo As group:
                         Height: =5
@@ -520,7 +520,7 @@
                             Wrap: =false
                             X: =lbl_InvLOTNo.Width
                             Y: =lbl_InvLOTNo.Y
-                            ZIndex: =14
+                            ZIndex: =13
 
                     grp_InvExpDate As group:
                         Height: =5
@@ -565,7 +565,7 @@
                             Wrap: =false
                             X: =lbl_InvExpDate.Width
                             Y: =lbl_InvExpDate.Y
-                            ZIndex: =13
+                            ZIndex: =12
 
                 spn_InvLoader As Spinner:
                     BasePaletteColor: =
