--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -153,7 +153,15 @@
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
-            ZIndex: =3
+            Visible: =!isLoading
+            ZIndex: =2
+
+            com_InvGalleries As com_Galleries:
+                EntriesToDisplay: =5
+                LayoutMinHeight: =640
+                LayoutMinWidth: =640
+                LineLabels: |-
+                    ={Line1: "Broj artikla:", Line2: "Naziv artikla:", Line3: "LOT", Line4: "Rok trajanja:", Line5: "Količina"}
 
             Container4 As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.Light
@@ -163,7 +171,7 @@
                 RadiusBottomRight: =4
                 RadiusTopLeft: =4
                 RadiusTopRight: =4
-                ZIndex: =4
+                ZIndex: =2
 
                 "glr_Inv As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                     BorderColor: =App.Theme.Colors.Darker40
@@ -599,13 +607,30 @@
                     Y: =0
                     ZIndex: =3
 
+        spn_ProLoader_1 As Spinner:
+            BasePaletteColor: =
+            DisplayMode: =DisplayMode.Edit
+            FillPortions: =1
+            FontColor: =
+            Height: =200
+            Label: ="Učitavam dokument..."
+            LabelPosition: ='Spinner.LabelPosition'.Below
+            LayoutMinHeight: =200
+            LayoutMinWidth: =350
+            SpinnerSize: ='Spinner.SpinnerSize'.Huge
+            Visible: =isLoading
+            Width: =200
+            X: =0
+            Y: =0
+            ZIndex: =3
+
         com_InvFooter As com_Footer:
             IsInventura: =true
             JSONData: |-
                 ="{" & Char(34) & "Lines" & Char(34) & ": " & "{" & Char(34) & "Item_Journal_Line" & Char(34) & ":" & JSON(colLines) & "}" & "}"
             LayoutMinHeight: =640
             LayoutMinWidth: =640
-            ZIndex: =5
+            ZIndex: =4
 
     com_InvModal As com_Modal:
         IsInventura: =true
