--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -388,6 +388,26 @@ com_Galleries As CanvasComponent:
                     Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.LotNo) + (com_Galleries.LineValuePosition.LotNo * com_Galleries.NumberOfLinesToDisplay)
                     ZIndex: =16
 
+                lbl_LineExpDate As label:
+                    Color: =RGBA(50, 49, 48, 1)
+                    DisabledColor: =RGBA(166, 166, 166, 1)
+                    Font: =App.Theme.Font
+                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    Height: =Self.Size * 1.8
+                    OnSelect: =Select(Parent)
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    Size: =12
+                    Text: =ThisItem.Lot_No
+                    VerticalAlign: =VerticalAlign.Top
+                    Visible: =com_Galleries.LineValueVisibility.LotNo
+                    Width: =Parent.TemplateWidth - 175
+                    X: =lbl_Line1.Width + lbl_Line1.X
+                    Y: =lbl_Line1.Y + (lbl_Line1.Height * com_Galleries.LineValuePosition.LotNo) + (com_Galleries.LineValuePosition.LotNo * com_Galleries.NumberOfLinesToDisplay)
+                    ZIndex: =17
+
             btn_BackToLines As Button:
                 Align: =Align.Left
                 Appearance: ='ButtonCanvas.Appearance'.Transparent
