--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -86,6 +86,10 @@ com_Galleries As CanvasComponent:
                         Set(
                             wizardStep,
                             2
+                        );
+                        Set(
+                            isModalOpen,
+                            true
                         )
                     );
                     Set(
