--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -236,7 +236,20 @@ com_Modal As CanvasComponent:
                             TriggerOutput: ="FocusOut"
                             Type: ="Text"
                             ValidationState: =If(!IsNumeric(inp_rezQty_2.Value) || Value(inp_rezQty_2.Value) < 0, "Error", "None")
-                            Value: =If(IsBlank(com_Modal.QuantityCompleted),0,Abs(com_Modal.QuantityCompleted))
+                            Value: |-
+                                =If(
+                                    com_Modal.IsInventura,
+                                    If(
+                                        IsBlank(com_Modal.Qty_Phys_Inventory),
+                                        0,
+                                        Abs(com_Modal.Qty_Phys_Inventory)
+                                    ),
+                                    If(
+                                        IsBlank(com_Modal.QuantityCompleted),
+                                        0,
+                                        Abs(com_Modal.QuantityCompleted)
+                                    )
+                                )
                             Visible: =true
                             Width: =200
                             X: =40
