--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -5,7 +5,7 @@ com_Modal As CanvasComponent:
     IsInventura: =false
     IsNabavniNalog: =false
     LineId: ="Text"
-    LotNo: =Blank()
+    LotNo: =
     Quantity: =
     QuantityCompleted: =
     QuantityNewLOT: =
