--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -159,7 +159,6 @@
 
             com_InvGalleries As com_Galleries:
                 AddNew: =true
-                EntriesToDisplay: =5
                 FillPortions: =1
                 LayoutMinHeight: =200
                 LayoutMinWidth: =350
@@ -197,7 +196,7 @@
     com_InvModal As com_Modal:
         IsInventura: =true
         LineId: =com_InvGalleries.SelectedLine.'Line_No.'
-        LotNo: =com_InvGalleries.SelectedLine.Lot_No
+        LotNo: =If(IsBlank(com_InvGalleries.SelectedLine.Lot_No), Blank(), com_InvGalleries.SelectedLine.Lot_No)
         Qty_Phys_Inventory: =com_InvGalleries.SelectedLine.Qty_Phys_Inventory
         Quantity: =com_InvGalleries.SelectedLine.Quantity
         ResEntryId: =
