--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -196,6 +196,7 @@
     com_InvModal As com_Modal:
         IsInventura: =true
         LineId: =com_InvGalleries.SelectedLine.'Line_No.'
+        LotNo: =com_InvGalleries.SelectedLine.Lot_No
         Qty_Phys_Inventory: =com_InvGalleries.SelectedLine.Qty_Phys_Inventory
         Quantity: =com_InvGalleries.SelectedLine.Quantity
         ResEntryId: =
