--- a/BSiNS/Src/Components/com_Galleries.fx.yaml
+++ b/BSiNS/Src/Components/com_Galleries.fx.yaml
@@ -93,6 +93,8 @@ com_Galleries As CanvasComponent:
                         )
                     );
                     
+                    Notify(ThisItem.Lot_No &"   anisa   ");
+                    
                     Set(
                         ScannedItem,
                         Blank()
