--- a/BSiNS/Src/Components/com_Modal.fx.yaml
+++ b/BSiNS/Src/Components/com_Modal.fx.yaml
@@ -132,7 +132,7 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =If( (IsBlank(com_Modal.LotNo) && (com_Modal.IsInventura)) || com_Modal.IsNabavniNalog, true, false)
+                        Visible: =If(((IsBlank(com_Modal.LotNo) && com_Modal.IsInventura) || com_Modal.IsNabavniNalog), com_Modal.LotNo = "anisa", "suljic")
                         ZIndex: =1
 
                         TextCanvas3_12 As Text:
@@ -242,12 +242,12 @@ com_Modal As CanvasComponent:
                                     com_Modal.IsInventura,
                                     If(
                                         IsBlank(com_Modal.Qty_Phys_Inventory),
-                                        1,
+                                        0,
                                         Abs(com_Modal.Qty_Phys_Inventory)
                                     ),
                                     If(
                                         IsBlank(com_Modal.QuantityCompleted),
-                                        2,
+                                        0,
                                         Abs(com_Modal.QuantityCompleted)
                                     )
                                 )
@@ -282,6 +282,7 @@ com_Modal As CanvasComponent:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         LayoutAlignItems: =LayoutAlignItems.Center
                         LayoutDirection: =LayoutDirection.Vertical
+                        LayoutJustifyContent: =LayoutJustifyContent.Center
                         LayoutMinHeight: =30
                         LayoutMinWidth: =250
                         LayoutMode: =LayoutMode.Auto
@@ -289,7 +290,8 @@ com_Modal As CanvasComponent:
                         RadiusBottomRight: =4
                         RadiusTopLeft: =4
                         RadiusTopRight: =4
-                        Visible: =!com_Modal.IsInventura && !com_Modal.IsNabavniNalog
+                        Visible: |
+                            =!com_Modal.IsInventura && !com_Modal.IsNabavniNalog
                         ZIndex: =4
 
                         TextCanvas3_13 As Text:
