--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -197,6 +197,7 @@
         IsInventura: =true
         LineId: =com_InvGalleries.SelectedLine.'Line_No.'
         LotNo: =com_InvGalleries.SelectedLine.Lot_No
+        LotNoPropVisible: =((IsBlank(com_InvModal.LotNo) && com_InvModal.IsInventura) || com_InvModal.IsNabavniNalog)
         Qty_Phys_Inventory: =com_InvGalleries.SelectedLine.Qty_Phys_Inventory
         Quantity: =com_InvGalleries.SelectedLine.Quantity
         ResEntryId: =
